--- a/sftp-config.json
+++ b/sftp-config.json
@@ -14,12 +14,12 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "192.168.1.131",
-    "user": "fa",
-    "password": "fa",
+    "host": "192.168.1.117",
+    "user": "pi",
+    "password": "raspberry",
     //"port": "22",
     
-    "remote_path": "/home/fa/locating",
+    "remote_path": "/home/pi/locating",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
